--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
 
 :root {
     --color-1: #F9F5F0;
-    --color-2: #FFE1E0;
+    --color-2: #fbfbff;
     --color-3: #e3d5ca;
     --color-4: #d5bdaf;
     --color-5: #a75857;
     --color-6: #6a040f;
+    --color-7: #8a2d37;
+    --color-8: #f6eae0;
+    --color-9: #f9eded;
 }
 
 body {
@@ -17,6 +20,7 @@ body {
 
 hr {
     border-color: var(--color-5);
+    margin: 5px
 }
 
 .fancy {
@@ -25,14 +29,50 @@ hr {
 
 .text-change {
     text-align: center;
-    color: var(--color-5)
+    color: var(--color-5);
+}
+
+nav {
+    text-align: right;
+}
+
+nav a {
+    color: var(--color-7);
+    text-decoration: none;
+    padding: 8px 16px;
+    display: inline-block
+
+}
+
+nav a:hover {
+    background-color: var(--color-6);
+    color: var(--color-2)
+}
+
+.contact-link {
+    background-color: var(--color-6);
+    border-radius: 32px;
+    color: var(--color-3)
+}
+
+.contact-link:hover {
+    color: var(--color-1)
+}
+
+.style-change {
+    background-color: var(--color-4);
+    color: var(--color-2);
 }
 
 #header1 {
     text-align: center;
+    font-size: 40px;
+    background-color: var(--color-9);
+    padding: 10px;
+    margin: 5px 0px 0px 0px
 }
 
 #header2 {
     text-align: center;
-    background-color: var(--color-3)
+    font-family: Annie Use Your Telescope;
 }
